# Minesweeper

./: CMakeLists.txt  README.md
cmake_modules/: findSFML.cmake
src/: main.cpp
